--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "nesbot/carbon": "^2.68",
         "yajra/laravel-datatables-oracle": "^10.4"
     },
     "require-dev": {
